trash display on hover and fix gap in index page

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -10,8 +10,6 @@ body {
 	font-family: 'Playfair Display', serif;
 }
 
-
-
 .jumbotron-show {
 	margin-left: 2em;
 	margin-right: 2em;
@@ -77,7 +75,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	background-size: cover;
-	margin-bottom: .5%;
+	margin-bottom: 1%;
 }
 
 .item.sq {
@@ -134,16 +132,7 @@ body {
 
 .item:hover{	
 	cursor: pointer;
-}
-
-.item:hover .book-content {
-	display: none;
-}
-
-.item:hover .book-description {
-	transition: visibility 0s, opacity 0.5s linear;
-	display: inline-block;
-	
+	opacity: .9;
 }
 
 .book-description {
@@ -245,7 +234,7 @@ form {
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-auto-rows: 20em;
-	grid-gap: .5%;
+	grid-gap: .3%;
 	height: 100%;
 }
 
@@ -255,7 +244,7 @@ form {
 	justify-content: center;
 	align-items: center;
 	background-size: cover;
-	margin-bottom: .5%;
+	margin-bottom: .3%;
 }
 
 .item.sq {
